fix overflow phone

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-html { scroll-behavior: smooth; }
+html, body { scroll-behavior: smooth; 
+        overflow-x: hidden; }
